--- a/app/styles/btn.css
+++ b/app/styles/btn.css
@@ -1,6 +1,10 @@
 /* Button styles */
 .btn {
-	@apply flex justify-center items-center py-2 px-6 rounded-md select-none hover:opacity-90 active:opacity-80;
+	@apply flex justify-center items-center py-2 px-6 rounded-md select-none hover:opacity-90 active:opacity-80 transition duration-200;
+}
+
+.btn-primary {
+	@apply bg-primary text-high-contrast-text;
 }
 
 .btn-contrast {
@@ -12,5 +16,5 @@
 }
 
 .btn-disabled {
-	@apply bg-solid-backgrounds hover:bg-solid-backgrounds active:bg-solid-backgrounds hover:opacity-100 active:opacity-100 cursor-not-allowed;
+	@apply cursor-not-allowed opacity-70 hover:opacity-70 active:opacity-70;
 }
