--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,15 @@ body {
 }
 
 a {
-	@apply transition-effect text-high-contrast-text;
+	@apply transition-effect text-high-contrast-text hover:opacity-90;
+}
+
+ul {
+	@apply list-disc list-inside;
+}
+
+li {
+	@apply text-low-contrast-text;
 }
 
 @layer base {
@@ -82,7 +90,7 @@ a {
 	}
 
 	h3 {
-		@apply mt-8 scroll-m-20 text-2xl font-semibold tracking-tight;
+		@apply scroll-m-20 text-2xl font-semibold tracking-tight;
 	}
 
 	h4 {
